--- a/gb/25/10/14/n14616452.md
+++ b/gb/25/10/14/n14616452.md
@@ -13,12 +13,12 @@
 <p>白鹿前不久在宣传新剧时透露，她整个8月未与粉丝互动，是因为罹患不明疾病，出现持续性头痛、颈椎不适等症状，并伴随严重乏力及食欲骤降。她表示，自己生病时很脆弱，很绝望。身高165公分的她，在短短一个月内体重从原本47公斤骤降至43公斤，但看到粉丝一条条支持她、喜欢她的帖文，她就支撑了过来，现在几乎已痊愈。话题一度登上热搜。</p>
 <p>责任编辑：叶紫微</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/8/n9937008.md#1" target="_blank">陈益南：怵目惊心！1951年的“镇反”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/5/31/n3883877.md#1" target="_blank">公安部高官透露“天安门自焚”内幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10379858.md#1" target="_blank">剑平：抗美援朝？时间地点对手名义结果全错</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/29/n11353494.md#1" target="_blank">章天亮：倾国家之力的迫害</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
