--- a/gb/25/10/16/n14617439.md
+++ b/gb/25/10/16/n14617439.md
@@ -28,12 +28,12 @@
 <p>这两位学者总结说，虽然讯息和动机至关重要，但真正有意义且持续的改变取决于让更环保的选项变得经济实惠、便利和常态化。如果政策和环境支持节能选项，大规模的行为改变（以及实现气候和能源目标的进展）将变得更加容易实现。◇</p>
 <p>责任编辑：茉莉</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/13/n14201070.md#1">推动节能减排 政府楼公寓试点安装新型电暖气</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/31/n14215099.md#1">嘉义市关灯1小时 以行动响应节能</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/6/n14265334.md#1">台湾“节能月” 能源署教生活小改变日省1度电</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/20/n14394952.md#1">【名家专栏】为什么应该取消夏令时</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/12/n10478618.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（三）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/29/n11486472.md#1" target="_blank">听音乐喜得大法 以色列学员伦敦街头讲真相</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/23/n11606736.md#1" target="_blank">林辉：文革天津非法监狱“六十三号”的罪恶</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/13/n11042473.md#1" target="_blank">感恩李洪志大师 中西方民众的故事</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
